# sentinel

./: .gitignore  404.html  README.md  config-spec.html  config.yml  feed.xml  filters.html  index.html  pyproject.toml  roadmap.html
.github/workflows/: test.yml
assets/js/: just-the-docs.js  search-data.json
docs/: _config.yml  config-spec.md  filters.md  index.md
sentinel/: cli.py  types.py  util.py
sentinel/analyses/: __init__.py  alternatives.py  base.py  confidence.py
sentinel/dataframes/: reader.py
sentinel/exporters/: __init__.py  base.py  csv.py  slack.py  tog.py  util.py
sentinel/filters/: __init__.py  alternatives.py  base.py  confidence.py  prediction.py  state.py
tests/: test_sentinel.py
tests/resources/: call_end_state.csv  filter_words.csv  low_asr_confidence.csv  low_confidence.csv  no_alternatives.csv  prediction_low_confidence.csv  records.csv  state_loop.csv  state_stuck.csv
