[tool.poetry]
name = "sentinel"
version = "0.1.1"
description = ""
authors = ["Vipul Sharma <vipul.sharma20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
boto3 = "^1.18.44"
requests = "^2.26.0"
PyYAML = "^5.4.1"
docopt = "^0.6.2"
tabulate = "^0.8.9"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
